# SocialMedia

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 8beb636aa0dd_create_database.py
src/: config.py  database.py
src/auth/: manager.py  models.py  schemas.py
src/base/: exception.py  schemas.py  service_base.py
src/grades/: models.py
src/operations/: models.py  router.py
src/posts/: models.py  router.py  schemas.py  service.py
