[tool.poetry]
name = "socialmedia"
version = "0.1.0"
description = ""
authors = ["CyberEvil777 <danilinb01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.100.0"}
alembic = "^1.11.1"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
python-dotenv = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
fastapi-pagination = "^0.12.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
